--- a/Report/VisserDeZoeten.tex
+++ b/Report/VisserDeZoeten.tex
@@ -1,5 +1,7 @@
 
 \documentclass[12pt]{amsart}
+\usepackage{subfig}
+\usepackage{graphicx}
 \usepackage{geometry} % see geometry.pdf on how to lay out the page. There's lots.
 \geometry{a4paper} % or letter or a5paper or ... etc
 % \geometry{landscape} % rotated page geometry
@@ -36,6 +38,7 @@ Iteratively merge and estimate the camera poses for the consecutive frames (poin
 To estimate the fundamental matrix $F$ we implemented the eight-point algorithm, the normalized eight-point algorithm and the normalized eight-point algorithm with RANSAC. Before we can estimate the fundamental matrix we need a set of corresponding points across two images. Therefore we first detect interest points in each image and extract their descriptors in order to match the interest points. We discard all matches that are in the background using the method described in section \ref{background}. The matches can then be used to estimate the fundamental matrix. \\\\
 To check the correctness of the fundamental matrix estimation algorithms we verified that the fundamental matrix was singular ($\textit{det}(M) = 0$ for singular matrix $M$ ). We present our analysis of the estimation of the fundamental matrix for the first and second teddy-bear images in table \ref{fund}.
 \begin{table}
+\center
     \begin{tabular}{l|l|l|l}
     ~                  & ep & nep & nepR \\ \hline
     F                  
@@ -45,18 +48,39 @@ To check the correctness of the fundamental matrix estimation algorithms we veri
     det(F)             & 5.3517e-28  & 1.5718e-24             & -1.3839e-22                        \\ \hline
     elapsed time (sec) & 0.000807    & 0.151748               & 0.833404                           \\
     \end{tabular}
-    \label{fund}
     \caption{Fundamental matrix $F$, $\textit{det}(F)$ and the elapsed time in seconds to calculate $F$ for the eight-point algorithm (ep), normalized eight-point algorithm (nep) and the normalized eight-point algorithm with RANSAC (nepR)}
+        \label{fund}
+
 \end{table}
 \subsection{Eliminate of points detected in the background}
 \label{background}
 To eliminate points in the background we ask for some user-input. The user specifies an initial rectangle that contains the object of interest. We then initialize MATLAB's activecontour method with a mask with the size of the user-specified rectangle. This gives us a more precise mask. We again define a rectangle based on the output of the contour which fits the object of interest more tightly than the user-specified rectangle. Before we start computing matches between the two images, we first discard all interested points that lie outside of this rectangle. 
+
 \subsection{Chaining}
+
 \section{Assignment3}
+
+\begin{figure}
+\center
+\subfloat[]{
+\includegraphics[scale=0.35]{images/house1.jpg}
+}
+\center
+\subfloat[]{
+\label{amb}
+\includegraphics[scale=0.35]{images/house2.jpg}
+}
+\caption{Reconstruction from house. As can be seen in figure \subref{amb} perpendicular and parallel lines are not preserved.}
+\label{rec}
+\end{figure}
+
 \subsection{Structure from motion}
+We have implemented the Structure from Motion algorithm described in the lecture notes. First we normalize the point coordinates by translating them to the mean of the points in each view. Then, we apply SVD to the measurement matrix, the structure is the matrix $S = W^{\frac{1}{2}} V^T$. The results on the point-view matrix of the house model provided by Rahul Raguram can be found in figure \ref{rec}.
+
 \subsubsection{Point-tracking}
 By using our point-tracking algorithm we do not find enough point to recover the structure. MENTION SOMETHING ABOUT THE AVERAGE NUMBER OF FRAMES A POINT IS FOUND IN. We could improve our point-tracking algorithm by using dense SIFT in order to obtain more points that can be matched across the images. However, a consequence of using dense SIFT is that it is computationally more expensive than using just detected interested points and their descriptors.
+
 \subsubsection{Does the reconstruction has an ambiguity?} 
-Yes, the reconstruction suffers from affine ambiguity. When rotating the reconstruction so that the actual perpendicular and parallel lines look perpendicular and parallel we can recognize the house clearly. However, this only happens at a specific viewpoint, when viewing the reconstruction differently it is clear that lines that are parallel and lines that are perpendicular have not been reconstructed that way (this can be seen in image \ref{non-existent}). \subsection{Building 3D model}
+Yes, the reconstruction suffers from affine ambiguity. When rotating the reconstruction so that the actual perpendicular and parallel lines look perpendicular and parallel we can recognize the house clearly. However, this only happens at a specific viewpoint, when viewing the reconstruction differently it is clear that lines that are parallel and lines that are perpendicular have not been reconstructed that way (this can be seen in image \ref{amb}). \subsection{Building 3D model}
 
 \end{document}
