--- a/Report/VisserDeZoeten.tex
+++ b/Report/VisserDeZoeten.tex
@@ -48,6 +48,9 @@ Iteratively merge and estimate the camera poses for the consecutive frames (poin
 \textbf{What are the drawbacks of the ICP algorithm?}\\\\
 \textbf{How do you think the ICP algorithm can be improved, beside the techniques mentioned in ``Efficient variants of the ICP algorithm.'', in terms of efficiency and accuracy?}
 
+One disadvantage of the ICP algorithm is that the initial alignment can not be too far of. This is because ICP is a form of hill-climbing where any one optimum might not necessarily be the global optimum. This problem might not be an issue in all domains. 
+One method to improve the ICP performance is to improve the data sampling method. What might help in some cases is to sample from the contours of the structure. Another might be to on-the-fly find out what kind of sampling works best for the specific task.
+
 \section{Assignment 2}
 \subsection{Fundamental Matrix Estimation}
 To estimate the fundamental matrix $F$ we implemented the eight-point algorithm, the normalized eight-point algorithm and the normalized eight-point algorithm with RANSAC. Before we can estimate the fundamental matrix we need a set of corresponding points across two images. Therefore we first detect interest points in each image and extract their descriptors in order to match the interest points. We discard all matches that are in the background using the method described in section \ref{background}. The matches can then be used to estimate the fundamental matrix. \\\\
@@ -74,8 +77,7 @@ To eliminate points in the background we ask for some user-input. The user speci
 \subsection{Chaining}
 
 \section{Assignment3}
-
-\begin{figure}
+\begin{figure}[H]
 \center
 \subfloat[]{
 \includegraphics[scale=0.35]{images/house1.jpg}
@@ -89,13 +91,14 @@ To eliminate points in the background we ask for some user-input. The user speci
 \label{rec}
 \end{figure}
 
+
 \subsection{Structure from motion}
 We have implemented the Structure from Motion algorithm described in the lecture notes. First we normalize the point coordinates by translating them to the mean of the points in each view. Then, we apply SVD to the measurement matrix, the structure is the matrix $S = W^{\frac{1}{2}} V^T$. The results on the point-view matrix of the house model provided by Rahul Raguram can be found in figure \ref{rec}.
 
 \subsubsection{Point-tracking}
-By using our point-tracking algorithm we do not find enough point to recover the structure. MENTION SOMETHING ABOUT THE AVERAGE NUMBER OF FRAMES A POINT IS FOUND IN. We could improve our point-tracking algorithm by using dense SIFT in order to obtain more points that can be matched across the images. However, a consequence of using dense SIFT is that it is computationally more expensive than using just detected interested points and their descriptors.
+By using our point-tracking algorithm we do not find enough points to recover the structure. The average number of frames that a point is found in is only five frames. We could improve our point-tracking algorithm by using dense SIFT in order to obtain more points that can be matched across the images. However, a consequence of using dense SIFT is that it is computationally more expensive than using just detected interested points and their descriptors. Another option would be to have more frames describing the same motion so that points are visible in more frames.
 
-\subsubsection{Does the reconstruction has an ambiguity?} 
+\subsubsection{Does the reconstruction have an ambiguity?} 
 Yes, the reconstruction suffers from affine ambiguity. When rotating the reconstruction so that the actual perpendicular and parallel lines look perpendicular and parallel we can recognize the house clearly. However, this only happens at a specific viewpoint, when viewing the reconstruction differently it is clear that lines that are parallel and lines that are perpendicular have not been reconstructed that way (this can be seen in image \ref{amb}). \subsection{Building 3D model}
 
 \end{document}
